--- a/homeworks/assignment05_bagging_and_oob/assignment_bagging_and_oob.ipynb
+++ b/homeworks/assignment05_bagging_and_oob/assignment_bagging_and_oob.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "31ecde34",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "06110580",
    "metadata": {},
    "outputs": [],
@@ -46,71 +46,108 @@
     "    def __init__(self, num_bags, oob=False):\n",
     "        self.num_bags = num_bags\n",
     "        self.oob = oob\n",
-    "        \n",
-    "    def _generate_splits(self, data: np.ndarray):\n",
-    "        '''\n",
+    "\n",
+    "    def _generate_splits(self, data: np.ndarray) -> None:\n",
+    "        \"\"\"\n",
     "        Generate indices for every bag and store in self.indices_list list\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        self.indices_list = []\n",
     "        data_length = len(data)\n",
     "        for bag in range(self.num_bags):\n",
-    "            # Your Code Here\n",
-    "        \n",
-    "    def fit(self, model_constructor, data, target):\n",
-    "        '''\n",
+    "            self.indices_list.append(\n",
+    "                np.random.randint(0, data_length, size=data_length)\n",
+    "            )\n",
+    "        return None\n",
+    "\n",
+    "    def fit(\n",
+    "        self, model_constructor: callable, data: np.ndarray, target: np.ndarray\n",
+    "    ) -> None:\n",
+    "        \"\"\"\n",
     "        Fit model on every bag.\n",
     "        Model constructor with no parameters (and with no ()) is passed to this function.\n",
-    "        \n",
+    "\n",
     "        example:\n",
-    "        \n",
+    "\n",
     "        bagging_regressor = SimplifiedBaggingRegressor(num_bags=10, oob=True)\n",
     "        bagging_regressor.fit(LinearRegression, X, y)\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        self.data = None\n",
     "        self.target = None\n",
     "        self._generate_splits(data)\n",
-    "        assert len(set(list(map(len, self.indices_list)))) == 1, 'All bags should be of the same length!'\n",
-    "        assert list(map(len, self.indices_list))[0] == len(data), 'All bags should contain `len(data)` number of elements!'\n",
+    "        assert (\n",
+    "            len(set(list(map(len, self.indices_list)))) == 1\n",
+    "        ), \"All bags should be of the same length!\"\n",
+    "        assert list(map(len, self.indices_list))[0] == len(\n",
+    "            data\n",
+    "        ), \"All bags should contain `len(data)` number of elements!\"\n",
     "        self.models_list = []\n",
     "        for bag in range(self.num_bags):\n",
     "            model = model_constructor()\n",
-    "            data_bag, target_bag = # Your Code Here\n",
-    "            self.models_list.append(model.fit(data_bag, target_bag)) # store fitted models here\n",
+    "            data_bag, target_bag = (\n",
+    "                data[self.indices_list[bag]],\n",
+    "                target[self.indices_list[bag]],\n",
+    "            )\n",
+    "            self.models_list.append(\n",
+    "                model.fit(data_bag, target_bag)\n",
+    "            )  # store fitted models here\n",
     "        if self.oob:\n",
     "            self.data = data\n",
     "            self.target = target\n",
-    "        \n",
-    "    def predict(self, data):\n",
-    "        '''\n",
+    "\n",
+    "        return None\n",
+    "\n",
+    "    def predict(self, data: np.ndarray) -> np.ndarray:\n",
+    "        \"\"\"\n",
     "        Get average prediction for every object from passed dataset\n",
-    "        '''\n",
-    "        # Your code here\n",
-    "    \n",
-    "    def _get_oob_predictions_from_every_model(self):\n",
-    "        '''\n",
+    "        \"\"\"\n",
+    "        pred = np.mean([model.predict(data) for model in self.models_list], axis=0)\n",
+    "        return pred\n",
+    "\n",
+    "    def _get_oob_predictions_from_every_model(self) -> None:\n",
+    "        \"\"\"\n",
     "        Generates list of lists, where list i contains predictions for self.data[i] object\n",
     "        from all models, which have not seen this object during training phase\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        list_of_predictions_lists = [[] for _ in range(len(self.data))]\n",
-    "        # Your Code Here\n",
-    "        \n",
-    "        self.list_of_predictions_lists = np.array(list_of_predictions_lists, dtype=object)\n",
-    "    \n",
-    "    def _get_averaged_oob_predictions(self):\n",
-    "        '''\n",
+    "\n",
+    "        for i in range(self.data.shape[0]):\n",
+    "            for model, indices in zip(self.models_list, self.indices_list):\n",
+    "                if i not in indices:\n",
+    "                    list_of_predictions_lists[i].append(\n",
+    "                        model.predict(self.data[i].reshape(1, -1))\n",
+    "                    )\n",
+    "\n",
+    "        self.list_of_predictions_lists = np.array(\n",
+    "            list_of_predictions_lists, dtype=object\n",
+    "        )\n",
+    "        return None\n",
+    "\n",
+    "    def _get_averaged_oob_predictions(self) -> None:\n",
+    "        \"\"\"\n",
     "        Compute average prediction for every object from training set.\n",
     "        If object has been used in all bags on training phase, return None instead of prediction\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        self._get_oob_predictions_from_every_model()\n",
-    "        self.oob_predictions = # Your Code Here\n",
-    "        \n",
-    "        \n",
-    "    def OOB_score(self):\n",
-    "        '''\n",
+    "        self.oob_predictions = []\n",
+    "        for i in range(self.data.shape[0]):\n",
+    "            if len(self.list_of_predictions_lists[i]):\n",
+    "                self.oob_predictions.append(\n",
+    "                    np.mean([self.list_of_predictions_lists[i]])\n",
+    "                )\n",
+    "            else:\n",
+    "                self.oob_predictions.append(None)\n",
+    "        return None\n",
+    "\n",
+    "    def OOB_score(self) -> float:\n",
+    "        \"\"\"\n",
     "        Compute mean square error for all objects, which have at least one prediction\n",
-    "        '''\n",
+    "        \"\"\"\n",
     "        self._get_averaged_oob_predictions()\n",
-    "        return # Your Code Here"
+    "        oob_score = 0.0\n",
+    "        for i in range(len(self.oob_predictions)):\n",
+    "            if self.oob_predictions[i]:\n",
+    "                oob_score += (self.oob_predictions[i] - self.target[i]) ** 2.0\n",
+    "        return oob_score**0.5"
    ]
   },
   {
@@ -123,13 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "eaa2e710",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "from tqdm.auto import tqdm"
+    "# from tqdm.auto import tqdm"
    ]
   },
   {
@@ -142,27 +179,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "84c94a8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple tests done!\n"
+     ]
+    }
+   ],
    "source": [
-    "for _ in tqdm(range(100)):\n",
+    "for _ in range(100):\n",
     "    X = np.random.randn(2000, 10)\n",
     "    y = np.mean(X, axis=1)\n",
     "    bagging_regressor = SimplifiedBaggingRegressor(num_bags=10, oob=True)\n",
     "    bagging_regressor.fit(LinearRegression, X, y)\n",
     "    predictions = bagging_regressor.predict(X)\n",
-    "    assert np.mean((predictions - y)**2) < 1e-6, 'Linear dependency should be fitted with almost zero error!'\n",
-    "    assert bagging_regressor.oob, 'OOB feature must be turned on'\n",
+    "    assert (\n",
+    "        np.mean((predictions - y) ** 2) < 1e-6\n",
+    "    ), \"Linear dependency should be fitted with almost zero error!\"\n",
+    "    assert bagging_regressor.oob, \"OOB feature must be turned on\"\n",
     "    oob_score = bagging_regressor.OOB_score()\n",
-    "    assert oob_score < 1e-6, 'OOB error for linear dependency should be also close to zero!'\n",
-    "    assert abs(\n",
-    "        np.mean(\n",
-    "            list(map(len, bagging_regressor.list_of_predictions_lists))\n",
-    "        ) / bagging_regressor.num_bags - 1/np.exp(1)) < 0.1, 'Probability of missing a bag should be close to theoretical value!'\n",
-    "    \n",
-    "print('Simple tests done!')"
+    "    assert (\n",
+    "        oob_score < 1e-6\n",
+    "    ), \"OOB error for linear dependency should be also close to zero!\"\n",
+    "    assert (\n",
+    "        abs(\n",
+    "            np.mean(list(map(len, bagging_regressor.list_of_predictions_lists)))\n",
+    "            / bagging_regressor.num_bags\n",
+    "            - 1 / np.exp(1)\n",
+    "        )\n",
+    "        < 0.1\n",
+    "    ), \"Probability of missing a bag should be close to theoretical value!\"\n",
+    "\n",
+    "print(\"Simple tests done!\")"
    ]
   },
   {
@@ -175,27 +228,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "0cfd3a21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Medium tests done!\n"
+     ]
+    }
+   ],
    "source": [
-    "for _ in tqdm(range(10)):\n",
+    "for _ in range(10):\n",
     "    X = np.random.randn(200, 150)\n",
     "    y = np.random.randn(len(X))\n",
     "    bagging_regressor = SimplifiedBaggingRegressor(num_bags=20, oob=True)\n",
     "    bagging_regressor.fit(LinearRegression, X, y)\n",
     "    predictions = bagging_regressor.predict(X)\n",
-    "    average_train_error = np.mean((predictions - y)**2)\n",
-    "    assert bagging_regressor.oob, 'OOB feature must be turned on'\n",
+    "    average_train_error = np.mean((predictions - y) ** 2)\n",
+    "    assert bagging_regressor.oob, \"OOB feature must be turned on\"\n",
     "    oob_score = bagging_regressor.OOB_score()\n",
-    "    assert oob_score > average_train_error, 'OOB error must be higher than train error due to overfitting!'\n",
-    "    assert abs(\n",
-    "        np.mean(\n",
-    "            list(map(len, bagging_regressor.list_of_predictions_lists))\n",
-    "        ) / bagging_regressor.num_bags - 1/np.exp(1)) < 0.1, 'Probability of missing a bag should be close to theoretical value!'\n",
-    "    \n",
-    "print('Medium tests done!')"
+    "    assert (\n",
+    "        oob_score > average_train_error\n",
+    "    ), \"OOB error must be higher than train error due to overfitting!\"\n",
+    "    assert (\n",
+    "        abs(\n",
+    "            np.mean(list(map(len, bagging_regressor.list_of_predictions_lists)))\n",
+    "            / bagging_regressor.num_bags\n",
+    "            - 1 / np.exp(1)\n",
+    "        )\n",
+    "        < 0.1\n",
+    "    ), \"Probability of missing a bag should be close to theoretical value!\"\n",
+    "\n",
+    "print(\"Medium tests done!\")"
    ]
   },
   {
@@ -208,36 +275,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "8f929d6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complex tests done!\n"
+     ]
+    }
+   ],
    "source": [
-    "for _ in tqdm(range(10)):\n",
+    "for _ in range(10):\n",
     "    X = np.random.randn(2000, 15)\n",
     "    y = np.random.randn(len(X))\n",
     "    bagging_regressor = SimplifiedBaggingRegressor(num_bags=100, oob=True)\n",
     "    bagging_regressor.fit(LinearRegression, X, y)\n",
     "    predictions = bagging_regressor.predict(X)\n",
     "    oob_score = bagging_regressor.OOB_score()\n",
-    "    assert abs(\n",
-    "        np.mean(\n",
-    "            list(map(len, bagging_regressor.list_of_predictions_lists))\n",
-    "        ) / bagging_regressor.num_bags - 1/np.exp(1)) < 1e-2, 'Probability of missing a bag should be close to theoretical value!'\n",
-    "    \n",
-    "print('Complex tests done!')"
+    "    assert (\n",
+    "        abs(\n",
+    "            np.mean(list(map(len, bagging_regressor.list_of_predictions_lists)))\n",
+    "            / bagging_regressor.num_bags\n",
+    "            - 1 / np.exp(1)\n",
+    "        )\n",
+    "        < 1e-2\n",
+    "    ), \"Probability of missing a bag should be close to theoretical value!\"\n",
+    "\n",
+    "print(\"Complex tests done!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "af170ef8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0010244411714423474"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.mean(\n",
-    "            list(map(len, bagging_regressor.list_of_predictions_lists))\n",
-    "        ) / bagging_regressor.num_bags - 1/np.exp(1)"
+    "    list(map(len, bagging_regressor.list_of_predictions_lists))\n",
+    ") / bagging_regressor.num_bags - 1 / np.exp(1)"
    ]
   },
   {
@@ -251,9 +341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py3 Research",
+   "display_name": ".venv",
    "language": "python",
-   "name": "py3_research"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -265,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
